--- a/src/css/App.css
+++ b/src/css/App.css
@@ -7,8 +7,12 @@ light blue: #AFD8F2; */
 }
 
 .App {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
     background-color: white;
+    width: 100%;
     height: fit-content;
 }
 
