--- a/src/css/EducationSkills.css
+++ b/src/css/EducationSkills.css
@@ -117,140 +117,62 @@
     font-size: 25px;
 }
 
+@media (max-width: 464px) {
+    .esPage {
+        transform: none;
+        height: fit-content;
+    }
 
+    .esTitle{
+        font-size: 50px;
+        text-align: center;
+    }
 
-/* .esContext {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: space-evenly;
-}
+    .esContext {
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+        transform: none;
+    }
 
-.esTitle {
-    margin-top: 1em;
-    width: 89vw;
-    height: fit-content;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    border-radius: 5px;
-    opacity: 0.85;
-    cursor: default;
-    padding: .2em;
-    background-color: #f8f8f8;
-    border: solid 5px #1F3541;
-    color: #1F3541;
-    margin-bottom: 1em;
-}
+    .esLeft {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+    }
 
-.esTitle:hover {
-    transition: transform .5s ease;
-    transform: scale(1.02);
-}
+    .pursuitLinks {
+        display: flex;
+        flex-direction: column;
+    }
 
-.esLeft {
-    display: flex;
-    flex-direction: column;
-    width: 40%;
-    height: fit-content;
-}
+    .pursuitIcon {
+        width: 80px;
+        height: 80px;
+    }
 
-.esRight {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 40%;
-    height: fit-content;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    border-radius: 5px;
-    opacity: 0.85;
-    cursor: default;
-    background-color: #f8f8f8;
-    border: solid 5px #1F3541;
-    color: #1F3541;
-    padding: 1.5em;
-}
+    .esPursuit {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: fit-content;
+        width: 100%;
+    }
 
-.esRight:hover {
-    transition: transform .5s ease;
-    transform: scale(1.02);
-}
+    .esP {
+        text-align: center;
+        width: 100%;
+        font-size: 1.2rem;
+    }
 
-.esPursuit {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 90%;
-    height: fit-content;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    border-radius: 5px;
-    opacity: 0.85;
-    cursor: default;
-    padding: 1.5em;
-    background-color: #f8f8f8;
-    border: solid 5px #1F3541;
-    color: #1F3541;
-    margin-bottom: 1em;
-}
-
-.esPursuit:hover {
-    transition: transform .5s ease;
-    transform: scale(1.02);
-}
-
-.esBaruch {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 90%;
-    height: fit-content;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    border-radius: 5px;
-    opacity: 0.85;
-    cursor: default;
-    background-color: #f8f8f8;
-    border: solid 5px #1F3541;
-    color: #1F3541;
-    padding: 1.5em;
-}
-
-.esBaruch:hover {
-    transition: transform .5s ease;
-    transform: scale(1.02);
-}
-
-.iconRow{
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 25vh;
-    justify-content: space-evenly;
-}
-
-.skillsIcons {
-    width: 100px;
-    height: auto;
-    margin-bottom: 3em;
-}
-
-.skillsIcons:hover {
-    transition: transform .5s ease;
-    transform: scale(1.75);
-    cursor: pointer;
-}
-
-.hideTitle {
-    display: none;
-}
-
-.skillsIcons:hover + .hideTitle {
-    display: block;
-}
-
-@media (max-width: 1024px) {
-    .esContainer {
+    .iconRow {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+    /* .esContainer {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -352,110 +274,5 @@
 
     .hideTitle {
         display: block;
-    }
+    } */
 }
-
-@media (max-width: 464px) {
-    .esContainer {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 100%;
-        height: fit-content;
-    }
-
-    .esTitle {
-        margin-top: 1em;
-        width: 80vw;
-        height: fit-content;
-        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-        transition: 0.3s;
-        border-radius: 5px;
-        opacity: 0.85;
-        cursor: default;
-        padding: 1.5em;
-        margin-bottom: 1em;
-    }
-
-    .esContext {
-        display: flex;
-        flex-direction: column;
-        width: 80vw;
-        align-items: center;
-        justify-content: space-evenly;
-    }
-
-    .esLeft {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: flex-start;
-        width: 80vw;
-        height: fit-content;
-    }
-
-    .esRight {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: flex-start;
-        width: 80vw;
-        height: fit-content;
-        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-        transition: 0.3s;
-        border-radius: 5px;
-        opacity: 0.85;
-        cursor: default;
-        padding: 1.5em;
-        margin-bottom: 1em;
-    }
-
-    .esPursuit {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 80vw;
-        height: fit-content;
-        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-        transition: 0.3s;
-        border-radius: 5px;
-        opacity: 0.85;
-        cursor: default;
-        padding: 1.5em;
-        margin-bottom: 1em;
-    }
-
-    .esBaruch {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 80vw;
-        height: fit-content;
-        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-        transition: 0.3s;
-        border-radius: 5px;
-        opacity: 0.85;
-        cursor: default;
-        padding: 1.5em;
-        margin-bottom: 1em;
-    }
-
-    .iconRow{
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        height: fit-content;
-        justify-content: space-evenly;
-    }
-
-    .skillsIcons {
-        width: 200px;
-        height: auto;
-        margin-bottom: -.1em;
-        pointer-events: none;
-    }
-
-    .hideTitle {
-        display: block;
-    }
-} */
